--- a/style/header.css
+++ b/style/header.css
@@ -21,8 +21,6 @@ header{
 .menu li{
     display: inline-block;
     margin-left: 45px;
-    justify-content: space-between;
-
 }
 
 .menu li a{
@@ -32,5 +30,6 @@ header{
 }
 
 figure{
-    margin-left: 15%;
+    position: relative;
+    width: 100%;
 }
